Fix floated column layout issue.

--- a/css/projects/_grid.scss
+++ b/css/projects/_grid.scss
@@ -73,6 +73,10 @@
         .grid-item {
             width: 50%;
             float: left;
+
+                &:nth-child(odd) {
+                clear: left;
+            }
         }
     }
 }
